[gd_scene load_steps=9 format=4 uid="uid://b8pqow80ub5un"]

[ext_resource type="TileSet" uid="uid://baumjwro03ioe" path="res://Sprites/tileset.tres" id="1_11dti"]
[ext_resource type="Script" uid="uid://dik5mraca5csy" path="res://Scripts/room.gd" id="1_s3j8h"]
[ext_resource type="Script" uid="uid://ces1psc5gg4x4" path="res://Scripts/room_entrance.gd" id="2_s3j8h"]
[ext_resource type="Texture2D" uid="uid://divmryxvl32mh" path="res://Sprites/Tiles.png" id="3_h1l6b"]
[ext_resource type="PackedScene" uid="uid://dc22jp57db64h" path="res://Scenes/Enemies/enemy.tscn" id="5_h1l6b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iixi8"]
size = Vector2(16, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_cyadu"]
radius = 7.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yiwfh"]
size = Vector2(16, 8)

[node name="Room_Template" type="StaticBody2D"]
script = ExtResource("1_s3j8h")

[node name="Base" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD+/wcAAAAHAAIAAAABAAcAAAAHAAIAAAAHAP7/AAAHAAIAAAAHAAEAAAAHAAIAAAD4//7/AAAHAAIAAAD4/wEAAAAHAAIAAAD+//j/AAAHAAIAAAABAPj/AAAHAAIAAAAHAPj/AAAHAAoAAAD4//j/AAAAAAoAAAACAPj/AAAGAAYAAAADAPj/AAAGAAYAAAAEAPj/AAAGAAYAAAAFAPj/AAAGAAYAAAAGAPj/AAAGAAYAAAD9//j/AAAGAAYAAAD8//j/AAAGAAYAAAD7//j/AAAGAAYAAAD6//j/AAAGAAYAAAD5//j/AAAGAAYAAAACAAcAAAAGAAYAAAADAAcAAAAGAAYAAAAEAAcAAAAGAAYAAAAFAAcAAAAGAAYAAAAGAAcAAAAGAAYAAAD9/wcAAAAGAAYAAAD8/wcAAAAGAAYAAAD7/wcAAAAGAAYAAAD6/wcAAAAGAAYAAAD5/wcAAAAGAAYAAAAHAPr/AAAGAAYAAGAHAPv/AAAGAAYAAGAHAPz/AAAGAAYAAGAHAP3/AAAGAAYAAGAHAAIAAAAGAAYAAGAHAAMAAAAGAAYAAGAHAAQAAAAGAAYAAGAHAAUAAAAGAAYAAGAHAAYAAAAGAAYAAGD4/wYAAAAGAAYAAFD4/wUAAAAGAAYAAFD4/wQAAAAGAAYAAFD4/wMAAAAGAAYAAFD4/wIAAAAGAAYAAFD4//3/AAAGAAYAAFD4//z/AAAGAAYAAFD4//v/AAAGAAYAAFD4//r/AAAGAAYAAFD4//n/AAAGAAYAAFAHAPn/AAAGAAYAAGD4/wcAAAAAAAoAAGAHAAcAAAAHAAoAAFA=")
tile_set = ExtResource("1_11dti")

[node name="WallCollider" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-56, -56, -8, -56, -8, -81, -75, -81, -75, -8, -56, -8)

[node name="WallCollider2" type="CollisionPolygon2D" parent="."]
rotation = 1.5707964
polygon = PackedVector2Array(-56, -56, -8, -56, -8, -81, -75, -81, -75, -8, -56, -8)

[node name="WallCollider3" type="CollisionPolygon2D" parent="."]
rotation = -1.5707964
polygon = PackedVector2Array(-56, -56, -8, -56, -8, -81, -75, -81, -75, -8, -56, -8)

[node name="WallCollider4" type="CollisionPolygon2D" parent="."]
rotation = 3.1415927
polygon = PackedVector2Array(-56, -56, -8, -56, -8, -81, -75, -81, -75, -8, -56, -8)

[node name="EntranceNorth" type="Node2D" parent="."]
script = ExtResource("2_s3j8h")

[node name="Door" type="Node2D" parent="EntranceNorth"]

[node name="Tunnel" type="TileMapLayer" parent="EntranceNorth/Door"]
tile_map_data = PackedByteArray("AAD+//f/AAAGAAYAAGD+//b/AAAGAAYAAGABAPb/AAAGAAYAAGABAPf/AAAGAAYAAGA=")
tile_set = ExtResource("1_11dti")

[node name="Door_Shut" type="StaticBody2D" parent="EntranceNorth/Door"]

[node name="Sprite2D" type="Sprite2D" parent="EntranceNorth/Door/Door_Shut"]
position = Vector2(-4, -60)
texture = ExtResource("3_h1l6b")
region_enabled = true
region_rect = Rect2(11, 31, 8, 8)

[node name="Sprite2D2" type="Sprite2D" parent="EntranceNorth/Door/Door_Shut"]
position = Vector2(4, -60)
texture = ExtResource("3_h1l6b")
region_enabled = true
region_rect = Rect2(11, 31, 8, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntranceNorth/Door/Door_Shut"]
position = Vector2(0, -60)
shape = SubResource("RectangleShape2D_iixi8")

[node name="ExitTrigger" type="Area2D" parent="EntranceNorth"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntranceNorth/ExitTrigger"]
position = Vector2(0, -73)
shape = SubResource("CircleShape2D_cyadu")

[node name="PlayerSpawn" type="Node2D" parent="EntranceNorth"]
position = Vector2(0, -49)

[node name="Barrier" type="StaticBody2D" parent="EntranceNorth"]
visible = false
position = Vector2(0, -60)

[node name="TileMapLayer" type="TileMapLayer" parent="EntranceNorth/Barrier"]
position = Vector2(0, -4)
tile_map_data = PackedByteArray("AAD//wAAAAAGAAYAAAAAAAAAAAAGAAYAAAA=")
tile_set = ExtResource("1_11dti")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntranceNorth/Barrier"]
shape = SubResource("RectangleShape2D_yiwfh")

[node name="EntranceSouth" type="Node2D" parent="."]
rotation = -3.1415927
script = ExtResource("2_s3j8h")
direction = 1

[node name="Door" type="Node2D" parent="EntranceSouth"]

[node name="Tunnel" type="TileMapLayer" parent="EntranceSouth/Door"]
tile_map_data = PackedByteArray("AAD+//f/AAAGAAYAAGD+//b/AAAGAAYAAGABAPb/AAAGAAYAAGABAPf/AAAGAAYAAGA=")
tile_set = ExtResource("1_11dti")

[node name="Door_Shut" type="StaticBody2D" parent="EntranceSouth/Door"]

[node name="Sprite2D" type="Sprite2D" parent="EntranceSouth/Door/Door_Shut"]
position = Vector2(-4, -60)
texture = ExtResource("3_h1l6b")
region_enabled = true
region_rect = Rect2(11, 31, 8, 8)

[node name="Sprite2D2" type="Sprite2D" parent="EntranceSouth/Door/Door_Shut"]
position = Vector2(4, -60)
texture = ExtResource("3_h1l6b")
region_enabled = true
region_rect = Rect2(11, 31, 8, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntranceSouth/Door/Door_Shut"]
position = Vector2(0, -60)
shape = SubResource("RectangleShape2D_iixi8")

[node name="ExitTrigger" type="Area2D" parent="EntranceSouth"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntranceSouth/ExitTrigger"]
position = Vector2(0, -73)
shape = SubResource("CircleShape2D_cyadu")

[node name="PlayerSpawn" type="Node2D" parent="EntranceSouth"]
position = Vector2(0, -49)

[node name="Barrier" type="StaticBody2D" parent="EntranceSouth"]
visible = false
position = Vector2(0, -60)

[node name="TileMapLayer" type="TileMapLayer" parent="EntranceSouth/Barrier"]
position = Vector2(0, -4)
tile_map_data = PackedByteArray("AAD//wAAAAAGAAYAAAAAAAAAAAAGAAYAAAA=")
tile_set = ExtResource("1_11dti")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntranceSouth/Barrier"]
shape = SubResource("RectangleShape2D_yiwfh")

[node name="EntranceWest" type="Node2D" parent="."]
rotation = -1.5707964
script = ExtResource("2_s3j8h")
direction = 3

[node name="Door" type="Node2D" parent="EntranceWest"]

[node name="Tunnel" type="TileMapLayer" parent="EntranceWest/Door"]
tile_map_data = PackedByteArray("AAD+//f/AAAGAAYAAGD+//b/AAAGAAYAAGABAPb/AAAGAAYAAGABAPf/AAAGAAYAAGA=")
tile_set = ExtResource("1_11dti")

[node name="Door_Shut" type="StaticBody2D" parent="EntranceWest/Door"]

[node name="Sprite2D" type="Sprite2D" parent="EntranceWest/Door/Door_Shut"]
position = Vector2(-4, -60)
texture = ExtResource("3_h1l6b")
region_enabled = true
region_rect = Rect2(11, 31, 8, 8)

[node name="Sprite2D2" type="Sprite2D" parent="EntranceWest/Door/Door_Shut"]
position = Vector2(4, -60)
texture = ExtResource("3_h1l6b")
region_enabled = true
region_rect = Rect2(11, 31, 8, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntranceWest/Door/Door_Shut"]
position = Vector2(0, -60)
shape = SubResource("RectangleShape2D_iixi8")

[node name="ExitTrigger" type="Area2D" parent="EntranceWest"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntranceWest/ExitTrigger"]
position = Vector2(0, -73)
shape = SubResource("CircleShape2D_cyadu")

[node name="PlayerSpawn" type="Node2D" parent="EntranceWest"]
position = Vector2(0, -49)

[node name="Barrier" type="StaticBody2D" parent="EntranceWest"]
visible = false
position = Vector2(0, -60)

[node name="TileMapLayer" type="TileMapLayer" parent="EntranceWest/Barrier"]
position = Vector2(0, -4)
tile_map_data = PackedByteArray("AAD//wAAAAAGAAYAAAAAAAAAAAAGAAYAAAA=")
tile_set = ExtResource("1_11dti")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntranceWest/Barrier"]
shape = SubResource("RectangleShape2D_yiwfh")

[node name="EntranceEast" type="Node2D" parent="."]
rotation = 1.5707964
script = ExtResource("2_s3j8h")
direction = 2

[node name="Door" type="Node2D" parent="EntranceEast"]

[node name="Tunnel" type="TileMapLayer" parent="EntranceEast/Door"]
tile_map_data = PackedByteArray("AAD+//f/AAAGAAYAAGD+//b/AAAGAAYAAGABAPb/AAAGAAYAAGABAPf/AAAGAAYAAGA=")
tile_set = ExtResource("1_11dti")

[node name="Door_Shut" type="StaticBody2D" parent="EntranceEast/Door"]

[node name="Sprite2D" type="Sprite2D" parent="EntranceEast/Door/Door_Shut"]
position = Vector2(-4, -60)
texture = ExtResource("3_h1l6b")
region_enabled = true
region_rect = Rect2(11, 31, 8, 8)

[node name="Sprite2D2" type="Sprite2D" parent="EntranceEast/Door/Door_Shut"]
position = Vector2(4, -60)
texture = ExtResource("3_h1l6b")
region_enabled = true
region_rect = Rect2(11, 31, 8, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntranceEast/Door/Door_Shut"]
position = Vector2(0, -60)
shape = SubResource("RectangleShape2D_iixi8")

[node name="ExitTrigger" type="Area2D" parent="EntranceEast"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntranceEast/ExitTrigger"]
position = Vector2(0, -73)
shape = SubResource("CircleShape2D_cyadu")

[node name="PlayerSpawn" type="Node2D" parent="EntranceEast"]
position = Vector2(0, -49)

[node name="Barrier" type="StaticBody2D" parent="EntranceEast"]
visible = false
position = Vector2(0, -60)

[node name="TileMapLayer" type="TileMapLayer" parent="EntranceEast/Barrier"]
position = Vector2(0, -4)
tile_map_data = PackedByteArray("AAD//wAAAAAGAAYAAAAAAAAAAAAGAAYAAAA=")
tile_set = ExtResource("1_11dti")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntranceEast/Barrier"]
shape = SubResource("RectangleShape2D_yiwfh")

[node name="Enemy" parent="." instance=ExtResource("5_h1l6b")]
position = Vector2(37, -34)
